syntax = "proto3";
package isuxportal.proto.services.audience;
option go_package = "github.com/isucon/portal/proto.go/isuxportal/services/audience";

message ListTeamsRequest {}

message ListTeamsResponse {
  repeated TeamListItem teams = 1;
  message TeamListItem {
    int64 team_id = 1;
    string name = 2;
    repeated string member_names = 3;
    bool final_participation = 4;
    bool is_student = 5;
  }
}
