syntax = "proto3";
package isuxportal.proto.services.registration;
option go_package = "github.com/isucon/portal/proto.go/isuxportal/services/registration";

message JoinTeamRequest {
  int64 team_id = 1;
  string invite_token = 2;
  string name = 3;
  bool is_student = 4;
}

message JoinTeamResponse {}
